# django-training-backend

./: .gitignore  README.md  pyproject.toml
musicplatform/: RESULTS.md  conftest.py  db.sqlite3  manage.py
musicplatform/albums/: admin.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
musicplatform/albums/migrations/: 0001_initial.py  0002_alter_album_artist.py  0003_alter_album_artist.py  0004_alter_album_artist.py  0005_album_is_approved.py  0006_alter_album_is_approved.py  0007_song.py  0008_alter_song_audio_alter_song_image.py  0009_remove_album_artist.py  0010_album_artist.py
musicplatform/albums/tests/: test_endpoints.py
musicplatform/artists/: admin.py  middlewares.py  models.py  serializers.py  urls.py  views.py
musicplatform/artists/migrations/: 0001_initial.py  0002_alter_artist_options.py  0003_alter_artist_options.py  0004_alter_artist_managers_remove_artist_id_and_more.py
musicplatform/authentication/: urls.py  views.py
musicplatform/authentication/tests/: test_endpoints.py
musicplatform/musicplatform/: asgi.py  settings.py  urls.py  wsgi.py
musicplatform/users/: admin.py  forms.py  middlewares.py  models.py  serializers.py  urls.py  views.py
musicplatform/users/migrations/: 0001_initial.py  0002_alter_extendeduser_options_alter_extendeduser_table.py  0003_alter_extendeduser_bio.py  0004_extendeduser_repeated_password.py  0005_remove_extendeduser_repeated_password.py  0006_alter_extendeduser_password.py  0007_alter_extendeduser_password.py  0008_alter_extendeduser_email.py
